--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,13 @@ repository               : "suninbaek/suninbaek.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Sunin Baek"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "Undergraduate Researcher in the Movement Intelligence Laboratory at Korea University"
+  location         : "Seoul, Republic of Korea"
+  employer         : "Korea University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "suninbaek@korea.ac.kr" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
