--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "https://www.linkedin.com/in/sunin-baek-8a467a259?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B6lnkAAWGQIy7rFLenMTESA%3D%3D"
+  linkedin         : # "https://www.linkedin.com/in/sunin-baek-8a467a259?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B6lnkAAWGQIy7rFLenMTESA%3D%3D"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
