--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Sunin Baek"
 title_separator          : "-"
 name                     : &name "Sunin Baek"
-description              : &description "Undergraduate Researcher in the Movement Intelligence Laboratory at Korea University"
+description              : &description "Graduate Researcher in the Movement Intelligence Laboratory at Korea University"
 url                      : https://suninbaek.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "suninbaek/suninbaek.github.io"
