--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.jpg"
   name             : "Sunin Baek"
   pronouns         : # example: "she/her"  
-  bio              : "Undergraduate Researcher in the Movement Intelligence Laboratory at Korea University"
+  bio              : "Graduate Researcher in the Movement Intelligence Laboratory at Korea University"
   location         : "Seoul, Republic of Korea"
   employer         : "Korea University"
   uri              : # URL
